Add Entity Framework Core setup and authentication configuration

--- a/HwsBackend.Api/appsettings.json
+++ b/HwsBackend.Api/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=interchange.proxy.rlwy.net;Port=39617;Database=railway;User=root;Password=ieRRgqIXJvINsrYACfQwwqniWmrpmUMK;SslMode=Required;"
+  }
 }
