Implement JWT authentication with AuthService and TokenGenerator, add AuthController, and update appsettings for JWT configuration

--- a/HwsBackend.Api/appsettings.json
+++ b/HwsBackend.Api/appsettings.json
@@ -8,5 +8,10 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=interchange.proxy.rlwy.net;Port=39617;Database=railway;User=root;Password=ieRRgqIXJvINsrYACfQwwqniWmrpmUMK;SslMode=Required;"
-  }
+  },
+  "Jwt": {
+  "Key": "TonSecretTresTresLongEtSecurise123!",
+  "Issuer": "HwsBackend",
+  "Audience": "HwsFront"
+}
 }
