--- a/HwsBackend.Infrastructure/HwsBackend.Infrastructure.csproj
+++ b/HwsBackend.Infrastructure/HwsBackend.Infrastructure.csproj
@@ -2,6 +2,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\HwsBackend.Application\HwsBackend.Application.csproj" />
+    <ProjectReference Include="..\HwsBackend.Domain\HwsBackend.Domain.csproj" />
   </ItemGroup>
 
   <ItemGroup>
@@ -9,6 +10,7 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.12" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="8.0.12" />
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="8.0.2" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.16.0" />
   </ItemGroup>
 
   <PropertyGroup>
