Enhance API with new features: add ConfigController, update Activities and Guides management, implement DTOs for Activity and Guide, and configure DbContext for new relationships and reference options.

--- a/HwsBackend.Api/HwsBackend.Api.csproj
+++ b/HwsBackend.Api/HwsBackend.Api.csproj
@@ -1,9 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>a54b0506-4238-4ab8-be08-7663ae61b8af</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
